flex/04-flex-information/style.css
body {
  font-family: 'Courier New', Courier, monospace;
}

img {
  width: 100px;
  height: 100px;
}

.title {
  font-size: 36px;
  font-weight: 900;
  /* My solution */
  display: flex;
  justify-content: center;
  margin: 0 0 32px 0;
}

.plants {
  margin: 32px;
}
.plants.list { /* My solution */
  padding: 0;
  display: flex;
  list-style: none;
  justify-content: center;
  gap: 56px;
}

li { /* My solution */
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-content: flex-start;
  width: 200px;
}

.text {
  text-align: center;
}

/* do not edit this footer */
.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 52px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #eee;
}

